--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@types/react": "17.0.3",
-    "@videojs/vhs-utils": "^3.0.0",
+    "@videojs/vhs-utils": "3.0.0",
+    "antd": "4.15.0",
     "axios": "0.21.1",
     "immutable": "3.8.2",
     "jwt-decode": "3.1.2",
-    "m3u8-parser": "^4.6.0",
+    "m3u8-parser": "4.6.0",
     "moment": "2.29.1",
-    "mpd-parser": "^0.16.0",
-    "mux.js": "^5.11.0",
+    "mpd-parser": "0.16.0",
+    "mux.js": "5.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-file-base64": "1.0.3",
     "react-google-login": "5.2.2",
     "react-redux": "7.2.3",
