--- a/package.json
+++ b/package.json
@@ -3,32 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.13.17",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@types/react": "^17.0.3",
-    "@videojs/vhs-utils": "^3.0.0",
-    "antd": "^4.15.2",
-    "axios": "^0.21.1",
-    "immutable": "^3.8.2",
-    "jwt-decode": "^3.1.2",
-    "m3u8-parser": "^4.6.0",
-    "moment": "^2.29.1",
-    "mpd-parser": "^0.16.0",
-    "mux.js": "^5.11.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.3.2",
-    "react-file-base64": "^1.0.3",
-    "react-google-login": "^5.2.2",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "^5.2.0",
-    "react-toastify": "^7.0.3",
-    "reactstrap": "^8.9.0",
-    "redux": "^4.0.5",
-    "redux-form": "^8.3.7",
-    "redux-thunk": "^2.3.0",
-    "video.js": "^7.12.1"
+    "@babel/runtime": "7.13.17",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
+    "@types/react": "17.0.3",
+    "@videojs/vhs-utils": "3.0.0",
+    "antd": "4.15.2",
+    "axios": "0.21.1",
+    "immutable": "3.8.2",
+    "jwt-decode": "3.1.2",
+    "m3u8-parser": "4.6.0",
+    "moment": "2.29.1",
+    "mpd-parser": "0.16.0",
+    "mux.js": "5.11.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-dropzone": "11.3.2",
+    "react-file-base64": "1.0.3",
+    "react-google-login": "5.2.2",
+    "react-redux": "7.2.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-toastify": "7.0.3",
+    "reactstrap": "8.9.0",
+    "redux": "4.0.5",
+    "redux-form": "8.3.7",
+    "redux-thunk": "2.3.0",
+    "video.js": "7.12.1"
   },
   "scripts": {
     "start": "react-scripts start",
