--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "immutable": "3.8.2",
     "jwt-decode": "3.1.2",
     "m3u8-parser": "4.6.0",
+    "material-ui": "^0.20.2",
     "moment": "2.29.1",
     "mpd-parser": "0.16.0",
     "mux.js": "5.11.0",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "11.3.2",
     "react-file-base64": "1.0.3",
     "react-google-login": "5.2.2",
+    "react-player": "^2.9.0",
     "react-redux": "7.2.3",
-    "react-router": "^5.2.0",
+    "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-toastify": "7.0.3",
     "reactstrap": "8.9.0",
